--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-PRIVATE_KEY="your_private_key_without_0x_prefix"
+PRIVATE_KEY="YOUR_PRIVATE_KEY_HERE"
+RPC_URL="YOUR_RPC_URL_HEREhttps://ethereum-sepolia-rpc.publicnode.com
