--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PRIVATE_KEY="YOUR_PRIVATE_KEY_HERE"
-RPC_URL="YOUR_RPC_URL_HEREhttps://ethereum-sepolia-rpc.publicnode.com
+RPC_URL=https://ethereum-sepolia-rpc.publicnode.com
